[gd_scene load_steps=10 format=3 uid="uid://tf016exhsnt6"]

[ext_resource type="Script" path="res://game/weapons/melee_base.gd" id="1_6lj4s"]
[ext_resource type="Texture2D" uid="uid://bsu8o0qrejr1" path="res://game/weapons/09_metal_bat/metal_baseball_bat.png" id="2_3hjlh"]
[ext_resource type="Script" path="res://game/weapons/melee_attack_logic.gd" id="3_kvbeu"]
[ext_resource type="AudioStream" uid="uid://cbxmvmkxh2fsk" path="res://game/weapons/04_rifle/rifle.wav" id="3_siove"]
[ext_resource type="Texture2D" uid="uid://p438nvqxk48v" path="res://game/weapons/weapon_crosshairs/B_Crosshair.png" id="4_bbpfx"]
[ext_resource type="PackedScene" uid="uid://knfyy36mjc22" path="res://game/shared/attacks/01_slam/skill_melee_slam.tscn" id="4_rq6lg"]

[sub_resource type="Animation" id="Animation_01dsh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../WeaponPivot:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_s87gc"]
resource_name = "Slam"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../WeaponPivot:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.233333),
"transitions": PackedFloat32Array(0.4, 3.48221),
"update": 0,
"values": [1.5708, -1.5708]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0a8q5"]
_data = {
"RESET": SubResource("Animation_01dsh"),
"Slam": SubResource("Animation_s87gc")
}

[node name="MetalBaseballBat" type="Node2D"]
script = ExtResource("1_6lj4s")
weapon_id = "bat_metal"
weapon_name = "Metal Baseball Bat"
weapon_type = 2
attack_speed = 1.8

[node name="MeleeAttackLogic" type="Node2D" parent="." node_paths=PackedStringArray("skill")]
script = ExtResource("3_kvbeu")
skill = NodePath("SlamAttack")

[node name="SlamAttack" parent="MeleeAttackLogic" node_paths=PackedStringArray("primary_timer") instance=ExtResource("4_rq6lg")]
angle = 0.45
cutoff_distance = 0.115
windup_time = 1.0
base_damage = 5
size = 180.0
primary_timer = NodePath("CooldownTimer")

[node name="AttackSFX" type="AudioStreamPlayer2D" parent="MeleeAttackLogic"]
stream = ExtResource("3_siove")

[node name="AttackCycleTimer" type="Timer" parent="MeleeAttackLogic"]

[node name="AttackAnimation" type="AnimationPlayer" parent="MeleeAttackLogic"]
libraries = {
"": SubResource("AnimationLibrary_0a8q5")
}

[node name="WeaponPivot" type="Node2D" parent="."]

[node name="Sprite" type="Sprite2D" parent="WeaponPivot"]
texture = ExtResource("2_3hjlh")
offset = Vector2(32, 0)

[node name="Crosshair" type="Sprite2D" parent="."]
visible = false
top_level = true
texture = ExtResource("4_bbpfx")
